--- a/svelte/package.json
+++ b/svelte/package.json
@@ -8,12 +8,15 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.20.6",
+		"@sveltejs/adapter-auto": "^6.1.0",
+		"@sveltejs/adapter-static": "^3.0.9",
+		"@sveltejs/kit": "^2.37.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"svelte": "^5.0.0",
 		"vite": "^6.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"overrides": {
+		"cookie": "^1.0.2"
+	}
 }
